Add Better parallelisation